--- a/src/app/auth/components/login/login.component.css
+++ b/src/app/auth/components/login/login.component.css
@@ -1,5 +1,7 @@
 .login.card {
-  /* width: 100%;
-  max-width: 30rem; */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+.loginPage {
+  background-image: url(../../../../assets/loginBg1.jpg);
+  background-size: cover;
 }
