--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,6 +1,6 @@
-<div class="container h-100">
+<div class="container-fluid h-100 regPage">
   <div class="row h-100 justify-content-center align-items-center">
-    <div class="card register mx-auto" style="width: 40%;">
+    <div class="card register mx-auto" style="width: 30%;">
       <div class="card-body">
         <h4 *ngIf='!this.isLogin' class="card-title">Register</h4>
         <div *ngIf='!this.isLogin'>
