--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,22 +4,27 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#" routerLinkActive="active">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['supervisorPage']">Supervisor</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['register']" routerLinkActive="active">Register</a>
+        <a class="nav-link" [routerLink]="['supervisorPage']" routerLinkActive="active">Supervisor</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['profile']" routerLinkActive="active">Profile</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngIf="_auth.isLogin">
+        <a class="nav-link" (click)="_auth.logout()" routerLinkActive="active"><mat-icon style="vertical-align: middle;">logout</mat-icon><span>Logout</span></a>
+      </li>
+      <li class="nav-item" *ngIf="!_auth.isLogin">
+        <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
+      </li>
+      <li class="nav-item" *ngIf="!_auth.isLogin">
+        <a class="nav-link" [routerLink]="['register']" routerLinkActive="active">Register</a>
       </li>
     </ul>
   </div>
